# hummingBirdDetection

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml  running_test.py
docs/docs/: index.md
humming_bird/: pyvenv.cfg
humming_bird_detection/: __init__.py  coco_split.py  convert_to_coco.py  convert_to_coco_new.py  dataset.py  features.py  plots.py  run-test.SBATCH  train_model.py  train_model_filtered.py
humming_bird_detection/modeling/: predict.py  train.py
notebooks/: display_images.ipynb
